--- a/about.html
+++ b/about.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head >
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - E-Cars and E-Bikes</title>
+    <title>About Us - TSPG</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
-        <h1>E-Cars and E-Bikes</h1> 
+        <a href="index.html">Home</a></li>
+        <h1>TSPG'S Eco-Friendly Vehicles</h1> 
         </header>
 
     <section class="about">
         <h2>Our Mission</h2>
-        <p>Transforming transportation with clean energy solutions. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a justo et augue tincidunt euismod.</p> 
-        <img src="team-photo.jpg" alt="Our Team"> 
+        <p>Transforming transportation with clean energy solutions. Making sustainable and affordable e-vehicles. </p> 
+        <img src="team.jpg" alt="Our Team"> 
     </section>
-
+    <section class="contact">
+        <h2>Contact Us</h2>
+        <p>Get in touch with us today!</p>
+        <div class="contact-info">
+            <a href="tel:+91123456789" class="contact-button">+91-123456789</a> 
+            <a href="mailto:info@ecarsandebikes.com" class="contact-button">info@ecarsandebikes.com</a> 
+        </div>
+    </section>
     <footer>
-        </footer> 
+        
+    </footer> 
 </body>
 </html>
