--- a/e-cars.html
+++ b/e-cars.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Cars - E-Cars and E-Bikes</title>
+    <title>E-Cars - The sustainable and affordable.</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
-        <h1>E-Cars and E-Bikes</h1> 
+        <a href="index.html">Home</a></li>
+        <h1>TSPG'S E-Cars</h1> 
         </header>
 
     <section class="e-cars">
         <h2>Our Electric Cars</h2>
 
         <div class="car-item">
-            <img src="car-model-1.jpg" alt="E-Car Model 1">
+            <img src="ecar1.jpeg" alt="E-Car Model 1" height="300">
             <h3>Model X1</h3>
             <p>Range: 300 miles</p> 
             <p>Top Speed: 120 mph</p>
