--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>E-Cars and E-Bikes</title>
+    <meta name="description" content="Shop high-performance electric cars and e-bikes for your eco-conscious commute. E-Cars and E-Bikes offers affordable, sustainable transportation solutions.">
+    <title>E-Cars and E-Bikes: Your Eco-Friendly Transportation Solution</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -12,17 +13,16 @@
         <h1>E-Cars and E-Bikes</h1>
         <nav>
             <ul> 
-                <li><a href="#">Home</a></li> 
+                <li><a href="index.html">Home</a></li> 
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="e-cars.html">E-Cars</a></li>
                 <li><a href="e-bikes.html">E-Bikes</a></li>
-                <li><a href="#">Contact</a></li> 
             </ul>
         </nav>
     </header>
 
     <section class="hero"> 
-        <img src="hero-image.jpg" alt="Electric Car"> 
+        <img src="hero-image.jpeg" alt="Electric Car" height="300"> 
         <div class="hero-text">
             <h2>Your Eco-Friendly Ride Awaits!</h2>
             <p>Choose from high-performance electric cars and bikes.</p>
