There was no action on the home page when clicking the shop and explore button so fixed it.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="hero-text">
             <h2>Your Eco-Friendly Ride Awaits!</h2>
             <p>Choose from high-performance electric cars and bikes.</p>
-            <button>Shop E-Cars</button>
-            <button>Explore E-Bikes</button> 
+            <button> <a href="e-cars.html"> E-Cars</a></button>
+            <button><a href="e-cars.html">Explore E-Bikes </a> </button> 
         </div>  
     </section> 
 
