--- a/about.html
+++ b/about.html
@@ -3,7 +3,9 @@
 <head >
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Shop high-performance electric cars and e-bikes for your eco-conscious commute. E-Cars and E-Bikes offers affordable, sustainable transportation solutions.">
     <title>About Us - TSPG</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"> 
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -21,8 +23,9 @@
         <h2>Contact Us</h2>
         <p>Get in touch with us today!</p>
         <div class="contact-info">
-            <a href="tel:+91123456789" class="contact-button">+91-123456789</a> 
+            <a href="tel:+91123456789" class="contact-button"><i class="fas fa-phone"></i>Call us</a> 
             <a href="mailto:info@ecarsandebikes.com" class="contact-button">info@ecarsandebikes.com</a> 
+            <a href="https://www.instagram.com/yourinstagramprofile/" class="contact-button" target="_blank" rel="noopener"><i class="fab fa-instagram"></i>instagram</a> 
         </div>
     </section>
     <footer>
